toolbar: hide location entry on lost focus

This solves the issue of the location entry remaining in the toolbar
if the user inadvertently (or not) tab-focuses a different widget.

https://bugzilla.gnome.org/show_bug.cgi?id=92509